--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
+    "install": "^0.13.0",
     "next": "15.0.1",
+    "npm": "^10.9.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
