--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.26.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "install": "^0.13.0",
